--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+	/* default host background color used by component styles */
+	--host-bg: slategrey;
+}
+
+body {
+	margin: 0;
+	background-color: var(--host-bg);
+	color: #333;
+}
